add events to schema
